--- a/portfolio.html
+++ b/portfolio.html
@@ -29,19 +29,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Fredrik Gustafson</a>
+                <a class="navbar-brand" href="index.html">Fredrik Gustafson</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#"> Portfolio
+                        <a href="portfolio.html"> Portfolio
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
 
