comments for CSS added, and final media queries for banner

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,10 +63,14 @@
                     <div class="col-md-6">
                             <img src="https://images.pottermore.com/bxd3o8b291gf/3I8tWnr8WIu44WAgAcIIaS/e5ab506aad4c5a02ffd6b9d62abc61df/SeverusSnape_WB_F5_SeverusSnapeHeadshotCloseUp_Still_080615_Land.jpg?w=1200"
                             class="img-responsive img-thumbnail" id="picture" alt="Responsive image">
+
+                           <div class="banner"> Hello </div>
                     </div> 
                     <div class="col-md-6">
                             <img src="https://images.pottermore.com/bxd3o8b291gf/3I8tWnr8WIu44WAgAcIIaS/e5ab506aad4c5a02ffd6b9d62abc61df/SeverusSnape_WB_F5_SeverusSnapeHeadshotCloseUp_Still_080615_Land.jpg?w=1200"
                             class="img-responsive img-thumbnail" id="picture" alt="Responsive image">
+
+                            <div class="banner"> Hello </div>
                     </div>
 
                 </div>
@@ -75,10 +79,12 @@
                     <div class="col-md-6">
                             <img src="https://images.pottermore.com/bxd3o8b291gf/3I8tWnr8WIu44WAgAcIIaS/e5ab506aad4c5a02ffd6b9d62abc61df/SeverusSnape_WB_F5_SeverusSnapeHeadshotCloseUp_Still_080615_Land.jpg?w=1200"
                             class="img-responsive img-thumbnail" id="picture" alt="Responsive image">
+                            <div class="banner"> Hello </div>
                     </div>
                     <div class="col-md-6">
                             <img src="https://images.pottermore.com/bxd3o8b291gf/3I8tWnr8WIu44WAgAcIIaS/e5ab506aad4c5a02ffd6b9d62abc61df/SeverusSnape_WB_F5_SeverusSnapeHeadshotCloseUp_Still_080615_Land.jpg?w=1200"
                             class="img-responsive img-thumbnail" id="picture" alt="Responsive image">
+                            <div class="banner"> Hello </div>
                     </div>
                 </div>
 
@@ -86,11 +92,13 @@
                     <div class="col-md-6">
                             <img src="https://images.pottermore.com/bxd3o8b291gf/3I8tWnr8WIu44WAgAcIIaS/e5ab506aad4c5a02ffd6b9d62abc61df/SeverusSnape_WB_F5_SeverusSnapeHeadshotCloseUp_Still_080615_Land.jpg?w=1200"
                             class="img-responsive img-thumbnail" id="picture" alt="Responsive image">
+                            <div class="banner"> Hello </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-md-6"> 
                             <img src="https://images.pottermore.com/bxd3o8b291gf/3I8tWnr8WIu44WAgAcIIaS/e5ab506aad4c5a02ffd6b9d62abc61df/SeverusSnape_WB_F5_SeverusSnapeHeadshotCloseUp_Still_080615_Land.jpg?w=1200"
                             class="img-responsive img-thumbnail" id="picture" alt="Responsive image">
+                            <div class="banner"> Hello </div>
                     </div>
                 </div>
         </div>        
